--- a/main.css
+++ b/main.css
@@ -36,3 +36,10 @@ li {
     display: inline;
     padding-left: 54px;
 }
+div#container1 {
+    height: 500px;
+    margin-top: 20px;
+    background-image: url(Assets/Help-a-Child_donate.png) ;
+    background-size: 100% 500px;
+    background-repeat: no-repeat
+}
