added content for container2

--- a/main.css
+++ b/main.css
@@ -41,5 +41,5 @@ div#container1 {
     margin-top: 20px;
     background-image: url(Assets/Help-a-Child_donate.png) ;
     background-size: 100% 500px;
-    background-repeat: no-repeat
+    background-repeat: no-repeat;
 }
