--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
-body{
- background-color: azure;   
+body {
+    background-color: azure;
 }
 header {
     width: 100%;
@@ -9,8 +9,6 @@ header {
 div#nav {
     float: left;
 }
-
-
 div#title {
     float: left;
     width: 30%;
@@ -20,8 +18,6 @@ div#title {
     font-family: 'Old Standard TT', serif;
     color: chocolate;
 }
-
-
 div#nav {
     padding-top: 30px;
     padding-left: 82px;
@@ -39,7 +35,32 @@ li {
 div#container1 {
     height: 500px;
     margin-top: 20px;
-    background-image: url(Assets/Help-a-Child_donate.png) ;
+    background-image: url(Assets/Help-a-Child_donate.png);
     background-size: 100% 500px;
     background-repeat: no-repeat;
+}
+div#container2 {
+    background-color: wheat;
+    height: 545px;
+    width: 100%;
+    clear: both;
+}
+div#text1 {
+    width: 60%;
+    height: 395px;
+    padding-top: 40px;
+    padding-left: 31px;
+    text-align: center;
+    font-family: 'Poiret One', cursive;
+    color: #F44336;
+    float: left;
+}
+p {
+    font-size: 20px;
+}
+div#images1 {
+    padding-top: 73px;
+    width: 35%;
+    float: left;
+    padding-left: 26px;
 }
