--- a/main.css
+++ b/main.css
@@ -64,3 +64,13 @@ div#images1 {
     float: left;
     padding-left: 26px;
 }
+div#gallery1 {
+    height: 292px;
+    width: 100%;
+    padding-left: 18px;
+}
+img#one {
+    height: 84%;
+    margin-top: 30px;
+    padding-left: 33px;
+}
