--- a/main.css
+++ b/main.css
@@ -70,7 +70,17 @@ div#gallery1 {
     padding-left: 18px;
 }
 img#one {
-    height: 84%;
+    width: 28%;
     margin-top: 30px;
     padding-left: 33px;
+}
+img#two {
+    width: 28%;
+    margin-top: 30px;
+    padding-left: 33px;
+}
+div#gallery2 {
+    height: 292px;
+    width: 100%;
+    padding-left: 18px;
 }
