--- a/main.css
+++ b/main.css
@@ -68,6 +68,7 @@ div#gallery1 {
     height: 292px;
     width: 100%;
     padding-left: 18px;
+    background-color: white;
 }
 img#one {
     width: 28%;
@@ -83,4 +84,5 @@ div#gallery2 {
     height: 292px;
     width: 100%;
     padding-left: 18px;
+    background-color: white;
 }
